// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BadgeIcon/> in the Badge component should have the right class names when the label is not passed 1`] = `
<span
  className="slds-icon_container slds-align_absolute-center"
>
  <svg
    aria-hidden={true}
    className="slds-icon slds-icon_xx-small slds-icon-text-default"
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#world"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</span>
`;

exports[`<BadgeIcon/> in the Badge component should have the right class names when the label is passed and iconPosition is left 1`] = `
<span
  className="slds-icon_container slds-align_absolute-center slds-m-right_xx-small"
>
  <svg
    aria-hidden={true}
    className="slds-icon slds-icon_xx-small slds-icon-text-default"
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#world"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</span>
`;

exports[`<BadgeIcon/> in the Badge component should have the right class names when the label is passed and iconPosition is right 1`] = `
<span
  className="slds-icon_container slds-align_absolute-center slds-m-left_xx-small"
>
  <svg
    aria-hidden={true}
    className="slds-icon slds-icon_xx-small slds-icon-text-default"
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#world"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</span>
`;
